--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,8 @@ android {
 }
 
 dependencies {
+    def lifecycle_version="2.3.1"
+    implementation "androidx.lifecycle:lifecycle-livedata:$lifecycle_version"
     implementation platform('com.google.firebase:firebase-bom:28.4.0')
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
