--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ android {
 
 dependencies {
     def lifecycle_version="2.3.1"
+    implementation 'com.android.volley:volley:1.1.0'
     implementation "androidx.lifecycle:lifecycle-livedata:$lifecycle_version"
     implementation platform('com.google.firebase:firebase-bom:28.4.0')
     implementation 'com.github.bumptech.glide:glide:4.12.0'
