--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.firebase:firebase-storage:20.0.0'
     def lifecycle_version="2.3.1"
     implementation 'com.android.volley:volley:1.1.0'
     implementation "androidx.lifecycle:lifecycle-livedata:$lifecycle_version"
@@ -50,5 +51,4 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     implementation 'com.pierfrancescosoffritti.androidyoutubeplayer:core:10.0.5'
     implementation 'com.android.support:design:28.0.0'
-    
 }
