--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ android {
 dependencies {
     implementation 'com.google.firebase:firebase-storage:20.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
     def lifecycle_version="2.3.1"
     implementation 'com.android.volley:volley:1.1.0'
     implementation "androidx.lifecycle:lifecycle-livedata:$lifecycle_version"
